--- a/sorc/bufr_cword.fd/CMakeLists.txt
+++ b/sorc/bufr_cword.fd/CMakeLists.txt
@@ -6,7 +6,7 @@ if(CMAKE_Fortran_COMPILER_ID MATCHES "^(Intel)$")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -list -assume noold_ldout_format")
 endif()
 
-set(exe_name bufr_cword.x)
+set(exe_name bufr_cword)
 add_executable(${exe_name} ${fortran_src})
 target_link_libraries(
   ${exe_name}
