--- a/sorc/bufr_tranjb.fd/CMakeLists.txt
+++ b/sorc/bufr_tranjb.fd/CMakeLists.txt
@@ -6,7 +6,7 @@ if(CMAKE_Fortran_COMPILER_ID MATCHES "^(Intel)$")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -static-intel -convert big_endian -list -assume noold_ldout_format")
 endif()
 
-set(exe_name bufr_tranjb.x)
+set(exe_name bufr_tranjb)
 add_executable(${exe_name} ${fortran_src})
 target_link_libraries(
   ${exe_name}
