--- a/sorc/CMakeLists.txt
+++ b/sorc/CMakeLists.txt
@@ -19,6 +19,12 @@ find_package(bufr REQUIRED)
 find_package(sp REQUIRED)
 find_package(sigio REQUIRED)
 
+if(bacio_VERSION GREATER_EQUAL 2.5.0)
+  set(bacio_name bacio)
+else()
+  set(bacio_name bacio_4)
+endif()
+
 # Build code.
 add_subdirectory(bufr_cword.fd)
 add_subdirectory(bufr_tranjb.fd)
